src/test/ui/proc-macro/issue-41211.stderr
error[E0658]: The attribute `emit_unchanged` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/issue-41211.rs:8:4
   |
LL | #![emit_unchanged]
   |    ^^^^^^^^^^^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: inconsistent resolution for a macro: first custom attribute, then attribute macro
  --> $DIR/issue-41211.rs:8:4
   |
LL | #![emit_unchanged]
   |    ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
